# american-gossip-spreading

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: school_edges.csv
docs/: PROJECT_GUIDE.md
scripts/: run_ba_multi.py  run_from_edgelist.py  run_network_comparison.py  run_school_like.py  run_sensitivity_q.py
src/gossip_model/: __init__.py  analysis.py  networks.py  plots.py  simulator.py
tests/: test_simulator.py
